--- a/pom.xml
+++ b/pom.xml
@@ -75,16 +75,16 @@
 		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-spring-boot2 -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-reactor-resilience4j -->
-		<dependency>
+		<!-- <dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
 		    <version>1.0.2.RELEASE</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 		    <groupId>io.github.resilience4j</groupId>
 		    <artifactId>resilience4j-circuitbreaker</artifactId>
-		    <version>1.1.0</version>
-		</dependency>
+		    <version>1.7.0</version>
+		</dependency> -->
 		<!-- https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-spring-boot2 -->
 		<dependency>
 		    <groupId>io.github.resilience4j</groupId>
